welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:2: error: type mismatch;
 found   : Unit
 required: Boolean
  for (i <- 1 to nums.length-1){
         ^